[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"
uuid = { version = "1.3.1", features = ["v4"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.4"
serde-aux = "4.2.0"
unicode-segmentation = "1.10.1"
validator = "0.16.0"
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.40"
anyhow = "1.0.70"
base64 = "0.21.0"
argon2 = { version = "0.5.0", features = ["std"] }
urlencoding = "2.1.2"
htmlescape = "0.3.1"
sha2 = "0.10.6"
hmac = { version = "0.12.1", features = ["std"] }
hex = "0.4.3"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
claims = "0.7.1"
fake = "~2.3"
linkify = "0.9.0"
once_cell = "1.17.1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["macros", "rt"] }
wiremock = "0.5.18"
